--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>vue-admin-template</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="app-loading" id="app-loading-message">
+        <i class="el-icon-loading"></i>
+        页面载入中...
+      </div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
